Re-fix minor CSS file alignment error

--- a/styles.css
+++ b/styles.css
@@ -1,62 +1,62 @@
 html, body {
-border: 0px none;
-padding: 0px;
-margin: 0px;
+    border: 0px none;
+    padding: 0px;
+    margin: 0px;
 }
 
 body {
-background-color: rgb(220, 243, 220);
-min-height: 100vh;
-display: flex;
-flex-direction: column;
+    background-color: rgb(220, 243, 220);
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 .main-container
 {
-flex: 1;
-display: flex;
-justify-content: center;
+    padding: 20px;
+    flex: 1;
+    display: flex;
+    justify-content: center;
 }
 
 .main-banner {
-background-color: rgb(5, 34, 5);
-color: white;
-display: flex;
-flex-direction: column;
-
+    background-color: rgb(5, 34, 5);
+    color: white;
+    display: flex;
+    flex-direction: column;
 }
 
 .main-banner > h1 {
-display: flex;
-align-self: center;
-color: rgb(220, 243, 220);
-font-size: 50px;
-margin: 0px;
-font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    display: flex;
+    align-self: center;
+    color: rgb(220, 243, 220);
+    font-size: 50px;
+    margin: 0px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .footer {
-background-color: forestgreen;
-color: rgb(220, 243, 220);
-display: flex;
-align-items: center;
-justify-content: center;
-padding: 2px;
+    background-color: forestgreen;
+    color: rgb(220, 243, 220);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2px;
 }
 
 .header-links {
-background-color: forestgreen;
-padding: 2px;
+    background-color: forestgreen;
+    padding: 2px;
 }
 
 .header-links > ul {
-display: flex;
-list-style-type: none;
-justify-content: space-evenly;
-margin: 0px;
-padding: 0px;
+    display: flex;
+    list-style-type: none;
+    justify-content: space-evenly;
+    margin: 0px;
+    padding: 0px;
 }
 
 .hello-text {
-display: flex;
+    display: flex;
 }
